--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Tiago Araújo</title>
+  <title>Thiago Araújo</title>
   <link rel="stylesheet" href="assets/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -45,20 +45,20 @@
         </div>
         <h3 class="title">NOSSA EQUIPE</h3>
         <div id="team-text">
-          <p>Nossa equipe é formada por advogados e colaboradores gabaritados, com treinamento voltado para garantir o melhor atendimento, e a busca sistemática na resolução das demandas dos nossos clientes. Contamos, ainda, com parcerias multidisciplinares, afim de atuar com excelência nas mais diversas demandas, tudo voltado a maximiza desempenhos e garantir o atendimento dos seus interesses.</p>
+          <p>Nossa equipe é formada por advogados e colaboradores gabaritados, com treinamento voltado para garantir o melhor atendimento e a busca sistemática na resolução das demandas dos nossos clientes. Contamos, ainda, com parcerias multidisciplinares, afim de atuar com excelência nas mais diversas demandas, tudo voltado a maximizar desempenhos e garantir o atendimento dos seus interesses.</p>
         </div>
         <div class="row" id="team-list">
           <div class="col-sm-2"></div>
           <div class="col-sm-3">
             <img src="assets/images/thiago.jpg" />
-            <div class="item-name">Thiago Araújo</div>
-            <div class="item-desc">Especializado na área empresarial, tributária e civil</div>
+            <div class="item-name">Thiago B. Araújo</div>
+            <div class="item-desc">Especialista em Direito Empresarial, Tributário e Civil</div>
           </div>
           <div class="col-sm-2"></div>
           <div class="col-sm-3">
             <img src="assets/images/luciane.jpg" />
             <div class="item-name">Luciane Nunes</div>
-            <div class="item-desc">Especializado na área familiar e trabalhista</div>
+            <div class="item-desc">Especialista em Direito do Trabalho, Criminal e Família</div>
           </div>
         </div>
       </div>
@@ -72,41 +72,63 @@
           </div>
           <h3 class="title">ÁREA DE ATUAÇÃO</h3>
         </div>
-        <div class="row" id="expertise-list">
-          <div class="col-sm-3">
-            <div class="expertise-item">
-              <div class="expertise-item-icon">
-                <img src="assets/images/icons/expertise_prev.png" />
+        <div id="expertise-list">
+          <div class="row">
+            <div class="col-sm-4">
+              <div class="expertise-item">
+                <div class="expertise-item-icon">
+                  <img src="assets/images/icons/expertise_prev.png" />
+                </div>
+                <p class="expertise-item-title">DIREITO PREVIDENCIÁRIO</p>
+                <p class="expertise-item-desc">Atuação contra a Previdência Social em negativas ilegais para concessão de aposentadoria, auxílios doença, acidente e auxílio reclusão, benefício assistencial ao idoso ou a pessoa com deficiência (pessoas não contribuintes e que possuem doença incapacitante para o trabalho) e pensões.</p>
               </div>
-              <p class="expertise-item-title">PREVIDENCIÁRIO</p>
-              <p class="expertise-item-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ullamcorper sagittis erat ac cursus.</p>
+            </div>
+            <div class="col-sm-4">
+              <div class="expertise-item">
+                <div class="expertise-item-icon">
+                  <img src="assets/images/icons/expertise_business.png" />
+                </div>
+                <p class="expertise-item-title">DIREITO EMPRESARIAL</p>
+                <p class="expertise-item-desc">Negociação judicial e extrajudicial, execução judicial e extrajudicial, ação monitória e de cobrança, recuperação judicial e extrajudicial e falência, análise e elaboração contratual, sucessão empresarial, elaboração e alteração de atos constitutivos empresariais, compliance, blindagem empresarial, acordo de acionistas, defesa do patrimônio pessoal dos sócios, holding familiar.</p>
+              </div>
+            </div>
+            <div class="col-sm-4">
+              <div class="expertise-item">
+                <div class="expertise-item-icon">
+                  <img src="assets/images/icons/expertise_criminal.png" />
+                </div>
+                <p class="expertise-item-title">DIREITO TRIBUTÁRIO</p>
+                <p class="expertise-item-desc">Assistência jurídica na elaboração de plano de planejamento tributário, recursos administrativos e judiciais contra cobrança indevida de tributos, elaboração de pareceres jurídicos e consultorias fiscais, acompanhamento em fiscalizações, negociação de planos de parcelamento fiscal e defesa em processos de execução fiscal.</p>
+              </div>
             </div>
           </div>
-          <div class="col-sm-3">
-            <div class="expertise-item">
-              <div class="expertise-item-icon">
-                <img src="assets/images/icons/expertise_business.png" />
+          <div class="row m-t-30">
+            <div class="col-sm-4">
+              <div class="expertise-item">
+                <div class="expertise-item-icon">
+                  <img src="assets/images/icons/expertise_work.png" />
+                </div>
+                <p class="expertise-item-title">DIREITO PENAL</p>
+                <p class="expertise-item-desc">Acompanhamento de inquérito policial e defesa judicial em ação penal em todas as instâncias, impetração de habeas corpus e pedido de revisão criminal. Também atuamos no acompanhamento de cumprimento da pena, para que haja máxima efetividade na concessão de benefícios legais ao condenado.</p>
               </div>
-              <p class="expertise-item-title">EMPRESARIAL</p>
-              <p class="expertise-item-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ullamcorper sagittis erat ac cursus.</p>
             </div>
-          </div>
-          <div class="col-sm-3">
-            <div class="expertise-item">
-              <div class="expertise-item-icon">
-                <img src="assets/images/icons/expertise_criminal.png" />
+            <div class="col-sm-4">
+              <div class="expertise-item">
+                <div class="expertise-item-icon">
+                  <img src="assets/images/icons/expertise_work.png" />
+                </div>
+                <p class="expertise-item-title">DIREITO TRABALHISTA</p>
+                <p class="expertise-item-desc">Atuação na área trabalhista para o acompanhamento de processos judiciais, em todas as instâncias, bem como assessoramento preventivo e corretivo para pequenas e grandes empresas.</p>
               </div>
-              <p class="expertise-item-title">CRIMINAL</p>
-              <p class="expertise-item-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ullamcorper sagittis erat ac cursus.</p>
             </div>
-          </div>
-          <div class="col-sm-3">
-            <div class="expertise-item">
-              <div class="expertise-item-icon">
-                <img src="assets/images/icons/expertise_work.png" />
+            <div class="col-sm-4">
+              <div class="expertise-item">
+                <div class="expertise-item-icon">
+                  <img src="assets/images/icons/expertise_work.png" />
+                </div>
+                <p class="expertise-item-title">DIREITO CIVIL/FAMÍLIA</p>
+                <p class="expertise-item-desc">Atuação judicial e extrajudicial no interesse dos clientes em responsabilidade civil, perdas e danos materiais e morais, danos estéticos, ações de custeio de tratamento por planos de saúde, elaboração e revisão de contratos, locação, incorporação imobiliária, consórcio, seguro, garantias contratuais, divórcio, alteração de regime de bens, inventário, pensão alimentícia, interdição judicial.</p>
               </div>
-              <p class="expertise-item-title">TRABALHISTA</p>
-              <p class="expertise-item-desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ullamcorper sagittis erat ac cursus.</p>
             </div>
           </div>
         </div>
@@ -120,10 +142,9 @@
         </div>
         <h3 class="title">NOSSOS VALORES</h3>
         <div id="ideals-text">
-          <p>Somos um escritório de advocacia atuante na defesa dos interesses de nossos clientes nas diversas áreas afetas ao Direito Empresarial e Contratual. Primamos sempre pelo alto padrão de qualidade nos nossos serviços e excelência no atendimento aos nossos clientes, pautados pela ética, seriedade e compromisso.
-          Atuantes desde 2014, sustentamos o orgulho do patrocínio, com sucesso, de grandes causas, não só de ordem litigiosa ou judicial, como também de ordem contratual e negocial. Acreditamos que o sucesso da advocacia reside principalmente na confiança entre o advogado e o cliente, por meio de um trabalho minucioso e de atendimento personalizado, critérios imperiosos para o atingimento do máximo interesse e satisfação, com a obtenção dos resultados desejados..</p>
+          <p>Somos um escritório de advocacia atuante na defesa dos interesses de nossos clientes, com profissionais especializados nas áreas Empresarial, Trabalhista, Tributário, Previdenciário, Criminal e Civil. Primamos sempre pelo alto padrão de qualidade nos nossos serviços e excelência no atendimento aos nossos clientes, pautados pela ética, seriedade e compromisso. Atuantes desde 2014, sustentamos o orgulho do patrocínio, com sucesso, de grandes causas, não só de ordem litigiosa, como também de ordem contratual e negocial. Acreditamos que o sucesso da advocacia reside, principalmente, na confiança entre o advogado e o cliente, por meio de um trabalho minucioso e de atendimento personalizado, critérios imperiosos para o atingimento do máximo interesse e satisfação, com a obtenção dos resultados desejados.</p>
         </div>
-        <div class="row" id="ideals-list">
+        <div class="row hide" id="ideals-list">
           <div class="col-sm-4 ideals-item active" data-target="ideal-1">
             <img src="assets/images/icons/ideals-1.png" class="img-responsive" />
             <div class="arrow"></div>
@@ -138,7 +159,7 @@
           </div>
         </div>
       </div>
-      <div id="ideals-desc">
+      <div id="ideals-desc hide">
         <div class="container">
           <div class="ideal-desc" id="ideal-1">
             <h3>Missão</h3>
@@ -169,7 +190,7 @@
               <input class="form-control" required type="email" placeholder="Email" name="email" />
             </div>
             <div class="col-sm-4">
-              <input class="form-control" required type="date" placeholder="Data de nascimento" name="birth" />
+              <input class="form-control" required type="text" placeholder="Data de nascimento" name="birth" />
             </div>
             <div class="col-sm-12">
               <textarea id="message" required class="form-control" name="message" rows="8" placeholder="Mensagem"></textarea>
@@ -191,7 +212,7 @@
                 </span>
               </p>
               <p>Endereço</p>
-              <p>SETOR HOTELEIRO, QUADRA CENTRAL, BLOCO 06, LOJA 04, SOBRADINHO, BRASÍLIA-DF, CEP: 72010-516</p>
+              <p>SETOR HOTELEIRO, QUADRA CENTRAL, BLOCO 06, LOJA 04, SOBRADINHO, BRASÍLIA-DF, CEP: 73010-536</p>
             </div>
             <div class="col-sm-4">
               <p>
@@ -201,7 +222,7 @@
                 </span>
               </p>
               <p>Email</p>
-              <p>advogadosctd@gmail.com</p>
+              <p>contato@tdadvogados.com</p>
             </div>
             <div class="col-sm-4">
               <p>
@@ -222,7 +243,7 @@
       </div>
     </div>
     <div id="map">
-      <a target="_blank" href="https://www.google.com.br/maps/place/Centro+de+Refer%C3%AAncia+Especializado+de+Assist%C3%AAncia+Social+-+CREAS+-+Sobradinho/@-15.6384823,-47.8267789,16.5z/data=!4m5!3m4!1s0x935a4062d4823fed:0x807b38c1763e1424!8m2!3d-15.6371457!4d-47.8299383?hl=pt-BR" class="">COMO CHEGAR</a>
+      <a target="_blank" href="https://www.google.com.br/maps/search/SETOR+HOTELEIRO,+QUADRA+CENTRAL,+BLOCO+06,+LOJA+04,+SOBRADINHO,/@-15.6503641,-47.7872472,19z" class="">COMO CHEGAR</a>
     </div>
 
     <footer></footer>
