--- a/index.html
+++ b/index.html
@@ -232,10 +232,10 @@
                 </span>
               </p>
               <p>Telefones</p>
-              <p>
-                <small>(61)</small> 3387-9476 <br />
-                9.8595-1325 <br />
-                9.8461-6362
+              <p style="line-height: 30px">
+                <small>(61)</small> 3543-5720 <br />
+                <svg style="width: 24px;height: 24px;top: 8px;position: relative;" viewBox="0 0 24 24"><path fill="#ffffff" d="M16.75,13.96C17,14.09 17.16,14.16 17.21,14.26C17.27,14.37 17.25,14.87 17,15.44C16.8,16 15.76,16.54 15.3,16.56C14.84,16.58 14.83,16.92 12.34,15.83C9.85,14.74 8.35,12.08 8.23,11.91C8.11,11.74 7.27,10.53 7.31,9.3C7.36,8.08 8,7.5 8.26,7.26C8.5,7 8.77,6.97 8.94,7H9.41C9.56,7 9.77,6.94 9.96,7.45L10.65,9.32C10.71,9.45 10.75,9.6 10.66,9.76L10.39,10.17L10,10.59C9.88,10.71 9.74,10.84 9.88,11.09C10,11.35 10.5,12.18 11.2,12.87C12.11,13.75 12.91,14.04 13.15,14.17C13.39,14.31 13.54,14.29 13.69,14.13L14.5,13.19C14.69,12.94 14.85,13 15.08,13.08L16.75,13.96M12,2A10,10 0 0,1 22,12A10,10 0 0,1 12,22C10.03,22 8.2,21.43 6.65,20.45L2,22L3.55,17.35C2.57,15.8 2,13.97 2,12A10,10 0 0,1 12,2M12,4A8,8 0 0,0 4,12C4,13.72 4.54,15.31 5.46,16.61L4.5,19.5L7.39,18.54C8.69,19.46 10.28,20 12,20A8,8 0 0,0 20,12A8,8 0 0,0 12,4Z" /></svg> 99146-0154 <br />
+                98102-1660
               </p>
             </div>
           </div>
@@ -243,7 +243,7 @@
       </div>
     </div>
     <div id="map">
-      <a target="_blank" href="https://www.google.com.br/maps/search/SETOR+HOTELEIRO,+QUADRA+CENTRAL,+BLOCO+06,+LOJA+04,+SOBRADINHO,/@-15.6503641,-47.7872472,19z" class="">COMO CHEGAR</a>
+      <a target="_blank" href="https://www.google.com.br/maps/place/CTD+Advocacia/@-15.6508309,-47.7900603,17z/data=!4m12!1m6!3m5!1s0x935a3f8c183428c1:0x55c2f46c011e35f9!2sCTD+Advocacia!8m2!3d-15.6508309!4d-47.7878716!3m4!1s0x935a3f8c183428c1:0x55c2f46c011e35f9!8m2!3d-15.6508309!4d-47.7878716" class="">COMO CHEGAR</a>
     </div>
 
     <footer></footer>
